--- a/app/css/app.css
+++ b/app/css/app.css
@@ -43,6 +43,9 @@ a {
 }
 
 img.preview{
-    width: 80px;
-    height: 60px;
+    max-width: 80px;
+    max-height: 60px;
+}
+.restaurant-list img[x-view-img]{
+    max-width: 60px;
 }
