保持横向滚动条一直可见，查看餐厅管理员列表

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -61,6 +61,7 @@ table thead td {
 
 .restaurant-table-container {
     overflow-y: auto;
+    max-height: 600px;
 }
 
 td.vertical-fix, td.horizontal-fix {
